Fix Alignments

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10689,8 +10689,8 @@ body.template-color-1 {
 
 @media only screen and (max-width: 767px) {
     .header-wrapper .header-right a.rn-btn {
-        padding: 10px 20px;
-        margin-right: 20px;
+        padding: 10px;
+        margin-right: 10px;
     }
 }
 
